--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-
-streamlit>=1.38
-pandas>=2.2
+streamlit==1.54.0
+pandas==3.0.0
+openpyxl==3.1.5
+python-dateutil==2.9.0.post0
+typing-extensions==4.12.2
